fix: resolve the grid layout issue of logoSection

--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -6,7 +6,7 @@
     background-color: var(--active);
     padding: calc(var(--base-padding) * 3) calc(var(--base-padding) * 2);
     display: grid;
-    grid-template-columns: 1.25fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: repeat(3, auto);
     gap: calc(var(--base-gap) * 2) 0;
     align-items: flex-start;
@@ -17,7 +17,6 @@
     }
 
     .logo-container {
-      grid-column: 1 / 3;
       justify-self: center;
     }
 
@@ -43,7 +42,6 @@
 
     .login-btns-container {
       justify-self: flex-end;
-      grid-area: 3 / 1 / 4 / 3;
     }
 
     @include a.breakpoint(large) {
@@ -52,17 +50,9 @@
       gap: 0;
       align-items: center;
 
-      .logo-container {
-        grid-column: 1 / 2;
-      }
-
       .login-btns-container,
       .contact-container {
         justify-self: center;
-      }
-
-      .login-btns-container {
-        grid-area: 1 / 3 / 2 / 4;
       }
     }
 
